# whosaidwhat

./: .gitignore  README.md  schema.sql
.github/workflows/: mac-build.yml
docs/: 00-architecture.md  01-ui-ux-design.md  02-process-detection.md  03-database-schema.md  04-diarization-evaluation.md  05-inference-routing.md  BUILD_LOG.md
graphify-out/: .graphify_labels.json  GRAPH_REPORT.md  cost.json  graph.html  graph.json  manifest.json
graphify-out/cache/: stat-index.json
pipeline/: requirements.txt  run.py
pipeline/tests/: test_core.py  test_extract.py  test_merge_store.py
pipeline/wsw/: chunking.py  diarize.py  extract.py  meetily_source.py  merge.py  store.py  summarize.py  transcribe.py
reference/meetily_pipeline/: meetily_db_extractor.py  pipeline.py
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/harness/: harness.rs
src-tauri/icons/: icon.icns
src-tauri/src/: config.rs  db.rs  lib.rs  main.rs  notify.rs  pipeline.rs  shell.rs
src-tauri/src/asr/: mod.rs  whisper.rs
src-tauri/src/capture/: macos.rs  mod.rs  session.rs
src-tauri/src/detect/: macos.rs  meet_url.rs  mod.rs  state.rs
src-tauri/src/diarize/: merge.rs  mod.rs  sherpa.rs
src-tauri/src/llm/: chunk.rs  client.rs  extract.rs  mod.rs  router.rs  summarize.rs
src-tauri/src/pipeline/: mod.rs  worker.rs
