[package]
name = "whosaidwhat"
version = "0.1.0"
edition = "2021"
description = "Local-first macOS meeting assistant: detect, record, diarize, summarize — all on-device"
license = "MIT"

[lib]
name = "whosaidwhat"
path = "src/lib.rs"

[[bin]]
name = "whosaidwhat"
path = "src/main.rs"

[features]
default = ["asr-whisper", "diarize-sherpa"]
# Native ASR via whisper.cpp (Metal on Apple Silicon).
asr-whisper = ["dep:whisper-rs"]
# Native diarization via sherpa-onnx (pyannote segmentation-3.0 ONNX + speaker embeddings).
diarize-sherpa = ["dep:sherpa-rs"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
anyhow = "1"
tracing = "0.1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync", "time", "process"] }
# oMLX speaks the OpenAI-compatible HTTP API; rustls avoids linking system OpenSSL.
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
rusqlite = { version = "0.32", features = ["bundled"] }
# Cross-platform process polling for the detection fallback path.
sysinfo = "0.33"
hound = "3.5"

whisper-rs = { version = "0.14", features = ["metal"], optional = true }
sherpa-rs = { version = "0.6", optional = true }

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
block2 = "0.6"
# addObserverForName_object_queue_usingBlock + NSNotification are feature-gated
# on objc2-foundation; the NSWorkspace feature of objc2-app-kit does not pull
# them in transitively.
objc2-foundation = { version = "0.3", features = ["NSNotification", "NSString", "NSOperation", "block2"] }
objc2-app-kit = { version = "0.3", features = ["NSWorkspace", "NSRunningApplication", "block2"] }
# CoreAudio property listeners for the mic-in-use signal.
coreaudio-sys = "0.2"
# Mic capture; system audio comes from ScreenCaptureKit (see capture::macos).
cpal = "0.15"
# capture::macos targets the rewritten API (SCStream::new(&filter,&config) +
# add_output_handler + SCStreamOutputTrait), which is the 1.x line of the
# doom-fish crate — NOT the 0.3.x API (sc_stream/StreamOutput/struct-literal
# config). Pin to 1.x accordingly.
screencapturekit = "1"

[dev-dependencies]
